--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
               <br>
               <br>
                 <div class="col-md-12">
-                <a href="https://github.com/AubbsDev21?tab=repositories">  <img title="github" src="img/icongithub.png"></a> <img title="Resume" src="img/resume.png"> <img title="Linkedin" src="img/linkedin.png">
+                <a href="https://github.com/AubbsDev21?tab=repositories">  <img title="github" src="img/icongithub.png"></a> <a href="https://docs.google.com/document/d/e/2PACX-1vTf_jVm9u3nOkjZkL8KsjT97xG2R4xH_ahwmARognEAgZcX6l9T0qt2qVJg0NQlpaiw13MIGFQ7plIQ/pub"><img title="Resume" src="img/resume.png"></a> <img title="Linkedin" src="img/linkedin.png">
                </div>
         </div>
     </footer>
