--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title> Aubre Body - Software Developer </title>
    <!--Favcon  -->
    <link rel="icon" href="img/Aubbs_icon.png" type="image/png" >
-    <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
+    <!-- Bootstrap Core CSS - Uffses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->  
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
