worked on profilio

--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
             <br>
             <div class="row">
               <div class="col-md-6">
-                <img src= "img/FlyarFly.png">
+                <img src= "img/Flyarfly.png">
               </div>
               <div class="col-md-6">
                 <div id="FlyarFly">
@@ -535,7 +535,37 @@
 
 
             </div>
+            <!--end of 4th ex-->
+            <br>
+            <br>
+            <br>
+
+            <div class="row">
+              <div class="col-md-6 ">
+                <div class="AcidRain">
+                   <!-- <img src="img/ootd_web.png">-->
+                    <h2><b>AcidRain</b></h2>
+                 <br>
+                 <h3 style="color: rgb(0, 255, 0);">Description:</h3>
+
+                 <p> <bold style="color: rgb(0, 255, 0);">AcidRain </bold>is a interact canvas design built with Javascript and used with p5.js library.
+
+                  </p>
+                  <p><b>Platforms used:</b> HTML, JavaScript, P5.js</p>
+
+                  <div>
+                    <a href=" https://github.com/AubbsDev21/AcidRain"><img src="img/github.png"></a>
+                  </div>
+               </div>
+          </div>
+              <div class="col-md-6">
+                <img src="img/Acidrian2.gif">
+
+              </div>
+            </div>
+        <!--profilio div -->  
         </div>
+        <!--end of profilio-->
         <!-- <div class="ray-bottom ray1"></div>
         <div class="ray-bottom ray2"></div>
         <div class="ray-bottom ray3"></div> -->
@@ -555,7 +585,7 @@
               <br>
               <br>
                 <div class="col-md-12">
-                <a href="https://github.com/AubbsDev21?tab=repositories">  <img title="github" src="img/icongithub.png"></a> <a href="https://docs.google.com/document/d/e/2PACX-1vTf_jVm9u3nOkjZkL8KsjT97xG2R4xH_ahwmARognEAgZcX6l9T0qt2qVJg0NQlpaiw13MIGFQ7plIQ/pub"><img title="Resume" src="img/resume.png"></a> <img title="Linkedin" src="img/linkedin.png">
+                <a href="https://github.com/AubbsDev21?tab=repositories">  <img title="github" src="img/icongithub.png"></a> <a href="https://docs.google.com/document/d/e/2PACX-1vTf_jVm9u3nOkjZkL8KsjT97xG2R4xH_ahwmARognEAgZcX6l9T0qt2qVJg0NQlpaiw13MIGFQ7plIQ/pub"><img title="Resume" src="img/resume.png"></a><a href="https://www.linkedin.com/in/aubre-body-047201161/"><img title="Linkedin" src="img/linkedin.png"> </a>
                </div>
         </div>
     </footer>
