minor changes to profilio and navbar

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <a href="#portfolio">Portfolio</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">Contact</a>
+                        <a href="#contact">Other</a>
                     </li>
                 </ul>
             </div>
@@ -540,9 +540,10 @@
             <br>
             <br>
 
-            <div class="row">
-              <div class="col-md-6 ">
+            <div class="row"> 
                 <div class="AcidRain">
+              <div class="col-md-6 ">
+                
                    <!-- <img src="img/ootd_web.png">-->
                     <h2><b>AcidRain</b></h2>
                  <br>
@@ -556,12 +557,13 @@
                   <div>
                     <a href=" https://github.com/AubbsDev21/AcidRain"><img src="img/github.png"></a>
                   </div>
-               </div>
+              
           </div>
-              <div class="col-md-6">
-                <img src="img/Acidrian2.gif">
+                    <div class="col-md-6 acidimg">
+                            <img src="img/Acidrian2.gif">
+                    </div>
+               </div>
 
-              </div>
             </div>
         <!--profilio div -->  
         </div>
@@ -585,7 +587,7 @@
               <br>
               <br>
                 <div class="col-md-12">
-                <a href="https://github.com/AubbsDev21?tab=repositories">  <img title="github" src="img/icongithub.png"></a> <a href="https://docs.google.com/document/d/e/2PACX-1vTf_jVm9u3nOkjZkL8KsjT97xG2R4xH_ahwmARognEAgZcX6l9T0qt2qVJg0NQlpaiw13MIGFQ7plIQ/pub"><img title="Resume" src="img/resume.png"></a><a href="https://www.linkedin.com/in/aubre-body-047201161/"><img title="Linkedin" src="img/linkedin.png"> </a>
+                <a href="https://github.com/AubbsDev21?tab=repositories">  <img title="github" src="img/icongithub.png"></a> <a href="https://www.slideshare.net/slideshow/embed_code/key/4gLH4x2QUHINzh"><img title="Resume" src="img/resume.png"></a><a href="https://www.linkedin.com/in/aubre-body-047201161/"><img title="Linkedin" src="img/linkedin.png"> </a>
                </div>
         </div>
     </footer>
