--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Personal website, resume, and portfolio for Aubre Body">
     <meta name="author" content="Aubre Body">
-
+    <link rel="canonical" href="https://www.aubrebody.co"/>
     <title> Aubre Body - Software Developer </title>
    <!--Favcon  -->
    <link rel="icon" href="img/Aubbs_icon.png" type="image/png" >
