--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
+   <script type="text/javascript">
+	  
+	   var host = "www.aubrebody.co";
+	   if ((host == window.location.host) && (window.location.protocol != "https:"))
+		  window.location.protocol = "https";
+    </script>
 
 </head>
 
