--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
    <script type="text/javascript">
-	  
+      //	    HTTPS force push
 	   var host = "www.aubrebody.co";
 	   if ((host == window.location.host) && (window.location.protocol != "https:"))
 		  window.location.protocol = "https";
@@ -318,8 +318,8 @@
                         <span><i class="icon-calendar"></i>06/2018 - Current</span>
                     </h5>
                     <ul>
-                        <li>Information Technology/System Administrator</li>
-                        <li>To later study at UNCC to finish Pursuing a Bachelor of Arts Degree in Computer Science with a concentration in Infomation Technology</li>
+                        <li>Information Technology: System Administrator/Linux Administrator/Network Engineer Track.</li>
+                        
 
                     </ul>
                     <hr>
@@ -594,6 +594,7 @@
                 <div class="col-md-12">
                 <a href="https://github.com/AubbsDev21?tab=repositories">  <img title="github" src="img/icongithub.png"></a> <a href="https://www.slideshare.net/slideshow/embed_code/key/4gLH4x2QUHINzh"><img title="Resume" src="img/resume.png"></a><a href="https://www.linkedin.com/in/aubre-body-047201161/"><img title="Linkedin" src="img/linkedin.png"> </a>
                </div>
+		    <p><bold>Devolper:</bold> Aubre Body <blod>  Owner:</blod> Aubre Body </p> 
         </div>
     </footer>
 
