--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
                 <div class="col-md-12">
                 <a href="https://github.com/AubbsDev21?tab=repositories">  <img title="github" src="img/icongithub.png"></a> <a href="https://www.slideshare.net/slideshow/embed_code/key/4gLH4x2QUHINzh"><img title="Resume" src="img/resume.png"></a><a href="https://www.linkedin.com/in/aubre-body-047201161/"><img title="Linkedin" src="img/linkedin.png"> </a>
                </div>
-		    <p><bold>Devolper:</bold> Aubre Body <blod>  Owner:</blod> Aubre Body </p> 
+		    <p style="Center"><bold>Devolper:</bold> Aubre Body <blod>  Owner:</blod> Aubre Body </p> 
         </div>
     </footer>
 
