Changing some content

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                         <span><i class="icon-calendar"></i>06/2018 - Current</span>
                     </h5>
                     <ul>
-                        <li>Information Technology: System Administrator/Linux Administrator/Network Engineer Track.</li>
+                        <li>Information Technology: System Administrator /Linux Administrator /Network Engineer Track.</li>
                         
 
                     </ul>
@@ -594,8 +594,8 @@
                 <div class="col-md-12">
                 <a href="https://github.com/AubbsDev21?tab=repositories">  <img title="github" src="img/icongithub.png"></a> <a href="https://www.slideshare.net/slideshow/embed_code/key/4gLH4x2QUHINzh"><img title="Resume" src="img/resume.png"></a><a href="https://www.linkedin.com/in/aubre-body-047201161/"><img title="Linkedin" src="img/linkedin.png"> </a>
                </div>
-		    <p style="Center"><bold>Devolper:</bold> Aubre Body <blod>  Owner:</blod> Aubre Body </p> 
-        </div>
+        </div> 
+		<p style="Center"><b>Devolper:</b> Aubre Body <b>  Owner:</b> Aubre Body </p> 
     </footer>
 
     <div class="footer-below">
