Chagned icon and content

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title> Aubre Body - Software Developer </title>
    <!--Favcon  -->
-   <link rel="icon" href="img/Aubbs_icon.png" type="image/png" >
+   <link rel="icon" href="img/iconFav.png" type="image/png" >
     <!-- Bootstrap Core CSS - Uffses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->  
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -209,7 +209,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="resume-content">
-                        <h3><span>Cretifications</span></h3>
+                        <h3><span>Certifications</span></h3>
                     </div>
                 </div>
 
@@ -222,11 +222,11 @@
                         </h5>
                         <ul>
                             <p align="text-center">This exam measures your ability to accomplish the technical tasks such as:</p>
-                            <li>Understanding server intallation</li>
-                            <li>Uderstanding server roles</li>
+                            <li>Understanding server installation</li>
+                            <li>Understanding server roles</li>
                             <li>Understanding Active Directory</li>
                             <li>Understanding storage</li>
-                            <li>Understanding server performance managment</li>
+                            <li>Understanding server performance management</li>
                             <li>Understanding server maintenance</li>
 
                         </ul>
@@ -238,8 +238,8 @@
                         <ul>
                             <p>This exam measures your ability to accomplish the technical tasks such as: </p>
                             <li>Understanding Desktop Applications</li>
-                            <li>Understanding Server Applictions </li>
-                            <li>Scrpiting Languages</li>
+                            <li>Understanding Server Applications </li>
+                            <li>Scripting Languages</li>
                             <li>Understanding Package Management Tools and repositories</li>
                         </ul>
                         <hr>
@@ -277,7 +277,7 @@
                         </div>
                         <hr>
 
-                      <h4>U.S. Army, Camp Butner,NC</h4>
+                      <h4>U.S. Army, Camp Bunter, NC</h4>
                         <b>Carpenter</b>
                         <h5>
                             <span><i class="icon-calendar"></i>July 2016 - Oct 2016</span>
@@ -314,8 +314,7 @@
                     </h5>
                     <ul>
                         <li>Information Technology/System Administrator</li>
-                        <li>To later study at UNCC to finish Pursuing a Bachelor of Arts Degree in Computer Science with a concentration in Infomation Technology</li>
-
+                        
                     </ul>
                     <hr>
                     
@@ -484,6 +483,10 @@
             </div>
             <br>
             <br>
+            <br>
+
+
+          <!--     ->  
 
             <div class="row">
               <div class="col-md-6 ">
@@ -510,26 +513,34 @@
 
               </div>
             </div>
+
+
+           <!-      --> 
             <br>
             <br>
             <br>
+
+
+
+
+
+
             <div class="row">
               <div class="col-md-6">
-                <img src= "img/Iphone X.png">
+                <img src= "img/BashChat_appgif.gif">
               </div>
               <div class="col-md-6">
-                <div id="Chatter">
-                  <img src="img/Group.png">
-                  <h2><b>Chatter</b></h2>
+                <div id="BashChat">
+                  <!--<img src="img/Group.png">-->
+                  <h2><b>BashChat</b></h2>
                   <br>
                   <h3>Description:</h3>
                 </div>
-                  <p><b style="color: #FF8AD8;">Chatter</b> is a anonymous topic chat IOS application.
-                     Where a user can create a topic and chat with multiplue end users.
+                  <p><b style="color: rgb(94, 255, 0);">BashChat</b> is a command line chat application built with node.js and Pusher's ChatKit API.
                    </p>
-                     <p><b>Platforms used: </b> UIkit, Facebook iOS SDK, Cocoapods</p>
+                     <p><b>Platforms used: </b> JavaScript, Node.js, Pusher ChatKit</p>
                   <div>
-                    <a href=""><img src="img/apple_app_store.png"></a> <a href="https://github.com/AubbsDev21/Chatter "><img src="img/github.png"></a>
+                     <a href="https://github.com/AubbsDev21/BashChat"><img src="img/github.png"></a>
                   </div>
               </div>
 
@@ -549,7 +560,7 @@
                  <br>
                  <h3 style="color: rgb(0, 255, 0);">Description:</h3>
 
-                 <p> <bold style="color: rgb(0, 255, 0);">AcidRain </bold>is a interact canvas design built with Javascript and used with p5.js library.
+                 <p> <bold style="color: rgb(0, 255, 0);">AcidRain </bold>is a small interact canvas design project simulating green rain fall, built with Javascript and using the p5.js library. 
 
                   </p>
                   <p><b>Platforms used:</b> HTML, JavaScript, P5.js</p>
