--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
    <script type="text/javascript">
+
       //	    HTTPS force push
 	   var host = "www.aubrebody.co";
 	   if ((host == window.location.host) && (window.location.protocol != "https:"))
 		  window.location.protocol = "https";
+
     </script>
 
 </head>
@@ -90,7 +92,7 @@
    <div class="content">
       <div id="large-header" class="large-header">
          <canvas id="demo-canvas"></canvas>
-         <h1 class="main-title"><span class="thin">Aubre Body</span><br> Software Developer  <br>& <br>Information Technology Specialist</h1>
+         <h1 class="main-title"><span class="thin">Aubre Body</span><br> Information Technology Professional <br>& <br> Software Developer  </h1>
       </div>
    </div>
  </div>
@@ -221,7 +223,7 @@
 
                 <div class="col-md-8">
                     <div class="resume-content">
-                        <h4>96-365: Microsoft Technology Associate: Windows Server Administration Funammentals</h4>
+                        <h4>96-365: Microsoft Technology Associate: Windows Server Administration Fundamentals</h4>
                         <h5>
                             <span><i class="icon-calendar"></i>2018 - Present</span>
                         </h5>
@@ -267,6 +269,22 @@
 
                 <div class="col-md-8">
                     <div class="resume-content">
+
+                            <h4>U.S. Army, Iraq</h4>
+                            <b>Carpenter</b>
+                            <h5>
+                                <span><i class="icon-calendar"></i>November 2016 - October 2017</span>
+                            </h5>
+                            <div>
+                                <ul>
+                                    <li><p> I was the co-lead carpenter in charge of a small group of Soldiers,
+                                      traveling in various places in Iraq. Improving living conditions and
+                                      assisting combat Soldiers in the fight against foreign enemies.
+                                    </p></li>
+                              </ul>
+                            </div>
+
+                        <hr>
                         <h4>U.S. Army, Iraq</h4>
                         <b>Carpenter</b>
                         <h5>
@@ -289,7 +307,7 @@
                         </h5>
                         <div>
                             <ul>
-                                <li>I was a part of an Army Civil Engineering Unit who helped with the improvement of Camp Butner.</li>
+                                <li>I was a part of an Army Civil Engineering Unit who helped with the improvement of Camp Bunter.</li>
 
 
                             </ul>
