--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
                         <br>
                      <!--#3498dbb0  -->
                         <p data-sr="reset enter left please, and hustle 20px">
-                                I am a highly motivated certified I.T. Specialist and for five years a self-taught programmer.
-                                 I am currently Along with my military background, I am a problem solver and a team player.
+                                I am a highly motivated certified I.T. Specialist and Software Developer.
+                                I am currently Along with my military background, I am a problem solver and a team player.
                           </p>
                         <br>
                         <ul data-sr='reset enter right please, and hustle 40px' class="about-detail">
@@ -223,6 +223,21 @@
 
                 <div class="col-md-8">
                     <div class="resume-content">
+                        
+                            <hr>
+                            <h4>96-366: Microsoft Technology Associate: Networking Fundamentals</h4>
+                            <h5>
+                                <span><i class="icon-calendar"></i>2018 - Present</span>
+                            </h5>
+                            <ul>
+                                <p>This exam measures your ability to accomplish the technical tasks such as: </p>
+                                <li>Understand local area networks and wide area networks </li>
+                                <li>Understand network topologies and access methods </li>
+                                <li>Understand switches, routers and, media types. </li>
+                                <li>Understand the Open Systems Interconnection (OSI) model</li>
+                            </ul>
+                            <hr>
+
                         <h4>96-365: Microsoft Technology Associate: Windows Server Administration Fundamentals</h4>
                         <h5>
                             <span><i class="icon-calendar"></i>2018 - Present</span>
@@ -428,6 +443,11 @@
                             <li class="current" title="SQL">
                                 <span class="bar" data-number="80"></span>
                                 <span class="number">80%</span>
+                            </li>
+                            </li>
+                            <li class="past" title="Angular 7">
+                                <span class="bar" data-number="60"></span>
+                                <span class="number">60%</span>
                             </li>
                         </ul>
                     </div>
